# simple_rest_API

./: .gitignore  CMakeLists.txt  index.html  main.css  script.js
include/: checkRoutes.hpp  dependencies.hpp  handleRequest.hpp  responseInfo.hpp  server.hpp  session.hpp  sharedFunctions.hpp  variables.hpp.in
include/HTTP/: createResponse.hpp  handleRequest.hpp  server.hpp  session.hpp
include/auth/: auth.hpp
include/checkRoutes/: checkTargets.hpp
include/getData/: getData.hpp
include/timer/: timer.hpp
include/webSocket/: webSocketListener.hpp  webSocketSession.hpp
src/: checkTargets.cxx  createResponse.cxx  main.cxx  sharedFunctions.cxx
src/HTTP/: handleRequest.cxx
src/auth/: auth.cxx
src/getData/: getData.cxx
src/webSocket/: webSocketSession.cxx
